--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -381,4 +381,8 @@
   <data name="WallLocationLineDescription" xml:space="preserve">
     <value>Wall locations.</value>
   </data>
+  <data name="ScheduleFilterTypeDescription" xml:space="preserve">
+    <value>A View Schedule Filter Type.</value>
+    <comment>Description for Filter Type</comment>
+  </data>
 </root>
