--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -374,4 +374,8 @@
   <data name="PerformanceAdviserDescription" xml:space="preserve">
     <value>All Performance Adviser rules.</value>
   </data>
+  <data name="ScheduleFilterTypeDescription" xml:space="preserve">
+    <value>A View Schedule Filter Type.</value>
+    <comment>Description for Filter Type</comment>
+  </data>
 </root>
