ff to latest R2017

--- a/src/Libraries/RevitNodesUI/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.en-US.resx
@@ -375,6 +375,7 @@
   <data name="ScheduleFilterTypeDescription" xml:space="preserve">
     <value>A View Schedule Filter Type.</value>
     <comment>Description for Filter Type</comment>
+  </data>
   <data name="PerformanceAdviserDescription" xml:space="preserve">
     <value>All Performance Adviser rules.</value>
   </data>
