--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -312,9 +312,6 @@
   <data name="MultipleSurfacesIntroducedAfterConversion" xml:space="preserve">
     <value>There are multiple surfaces converted from the input face.</value>
   </data>
-  <data name="InvalidFace" xml:space="preserve">
-    <value>The selected face cannot be used to create a wall. Please use a mass face instead.</value>
-  </data>
   <data name="DynamoSurfaceToRevitBRepFailure" xml:space="preserve">
     <value>An unexpected failure occurred when attempting to convert the surface into a Revit BRep</value>
   </data>
@@ -369,7 +366,46 @@
   <data name="RoofTypeNotFound" xml:space="preserve">
     <value>Roof type not found.</value>
   </data>
+  <data name="CategoryArgumentException" xml:space="preserve">
+    <value>You must supply a Category.</value>
+  </data>
+  <data name="NameArgumentException" xml:space="preserve">
+    <value>You must supply a Name.</value>
+  </data>
+  <data name="ScheduleTypeArgumentException" xml:space="preserve">
+    <value>Invalid Schedule Type.</value>
+  </data>
+  <data name="ExportOptionsArgumentException" xml:space="preserve">
+    <value>Invalid Schedule Export Options.</value>
+  </data>
+  <data name="CategoryVisibilityOverrideError" xml:space="preserve">
+    <value>Specified View Template is not valid for this View.</value>
+  </data>
+  <data name="ViewExportImageError" xml:space="preserve">
+    <value>There was an error exporting the image.</value>
+  </data>
+  <data name="DocumentDoesNotSupportGlobalParams" xml:space="preserve">
+    <value>Document does not support global parameters.</value>
+  </data>
+  <data name="NameAlreadyInUse" xml:space="preserve">
+    <value>Name already in use.</value>
+  </data>
+  <data name="InvalidShapeEditor" xml:space="preserve">
+    <value>Floor Shape cannot be edited.</value>
+  </data>
+  <data name="RoofTypeNotFound" xml:space="preserve">
+    <value>Roof type not found.</value>
+  </data>
+  <data name="InvalidFace" xml:space="preserve">
+    <value>The selected face cannot be used to create a wall. Please use a mass face instead.</value>
+  </data>
   <data name="CurtainSystemTypeNotFound" xml:space="preserve">
     <value>Curtain System Type not found.</value>
+  </data>
+  <data name="ExportColumnHeadersDescription" xml:space="preserve">
+    <value>How to export column headers. Default is MultipleRows.</value>
+  </data>
+  <data name="ScheduleExportError" xml:space="preserve">
+    <value>There was an error exporting this schedule.</value>
   </data>
 </root>
