--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -372,13 +372,14 @@
     <value>The type of the fill pattern.</value>
     <comment>Description for Fill Pattern Target</comment>
   </data>
+  <data name="ScheduleFilterTypeDescription" xml:space="preserve">
+    <value>A View Schedule Filter Type.</value>
+    <comment>Description for Filter Type</comment>
+  </data>
   <data name="PerformanceAdviserDescription" xml:space="preserve">
     <value>All Performance Adviser rules.</value>
   </data>
   <data name="WallLocationLineDescription" xml:space="preserve">
     <value>Wall locations.</value>
-  </data>
-  <data name="PerformanceAdviserDescription" xml:space="preserve">
-    <value>All Performance Adviser rules.</value>
   </data>
 </root>
