--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -398,6 +398,7 @@
   </data>
   <data name="LevelByNameError" xml:space="preserve">
     <value>Level with specified Name doesn't exist in project.</value>
+  </data>
   <data name="GeometryConversionFailure" xml:space="preserve">
     <value>One or more geometries have failed to convert due to this error: </value>
   </data>
