--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -402,4 +402,10 @@
   <data name="Sheet_NoViewsError" xml:space="preserve">
     <value>Must supply more than 0 views</value>
   </data>
+  <data name="ViewExportImageLockedError" xml:space="preserve">
+    <value>Attempt to override existing image failed due to file lock. Please make sure that image is not currently open in another application.</value>
+  </data>
+  <data name="ViewPlan_ViewFamilyNotFound" xml:space="preserve">
+    <value>Specified View Type could not be found.</value>
+  </data>
 </root>
