--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -402,4 +402,10 @@
   <data name="Sheet_NoViewsError" xml:space="preserve">
     <value>Must supply more than 0 views</value>
   </data>
+  <data name="AreaSchemeArgumentException" xml:space="preserve">
+    <value>You must supply an Area Scheme.</value>
+  </data>
+  <data name="ViewPlan_ViewFamilyNotFound" xml:space="preserve">
+    <value>Matching ViewFamilyType was not found.</value>
+  </data>
 </root>
