--- a/src/Legacy/DynamoRevitVersionSelector/Properties/Resources.resx
+++ b/src/Legacy/DynamoRevitVersionSelector/Properties/Resources.resx
@@ -123,24 +123,33 @@
   <data name="DynamoVersionText" xml:space="preserve">
     <value>Dynamo {0}</value>
   </data>
-  <data name="RestartMessage" xml:space="preserve">
-    <value>Dynamo version {0} will be loaded after Revit restart.</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="dynamo_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dynamo_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DynamoVersionTooltip" xml:space="preserve">
-    <value>Launches Dynamo {0}, to launch a different version of Dynamo you may need to restart Revit</value>
-  </data>
-  <data name="VisualProgramming" xml:space="preserve">
-    <value>Visual Programming</value>
-  </data>
   <data name="DynamoVersionSelection" xml:space="preserve">
     <value>Dynamo Version Selection</value>
   </data>
   <data name="VersionSelectionContent" xml:space="preserve">
     <value>Multiple version of Dynamo installation found on this system.
 Please select the Dynamo version you wish to run.</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="dynamo_setting_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dynamo_setting_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ProductNeedToRestartRevit" xml:space="preserve">
+    <value>Dynamo [{0}] is selected.
+
+Please restart Revit to use it.</value>
+    <comment>multiline text</comment>
+  </data>
+  <data name="VersionSelectionBtnText" xml:space="preserve">
+    <value>Version Selection</value>
+  </data>
+  <data name="VersionSelectionBtnToolTip" xml:space="preserve">
+    <value>Change active Dynamo version</value>
+  </data>
+  <data name="ProductLoaded" xml:space="preserve">
+    <value>Dynamo [{0}] is selected.</value>
+  </data>
+  <data name="DynamoCurrentVersionText" xml:space="preserve">
+    <value>Dynamo {0} (current)</value>
   </data>
 </root>
