Add ElementsByCategory API to View node.
ElementsByCategory is a public API on the View node that given a Category will return the list of elements contained in the view that match that category. An emtpy list is returned if no elements match.   An ArgumentException is thrown if a null or invalid Category Id is passed in.

--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -447,4 +447,7 @@
   <data name="StartPointListHasNulls" xml:space="preserve">
     <value>Start point list contains null elements</value>
   </data>
+  <data name="View_ElementsByCategory_Category_Invalid" xml:space="preserve">
+    <value>The supplied category id is invalid.</value>
+  </data>
 </root>
