--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -377,9 +377,16 @@
   </data>
   <data name="WallLocationLineDescription" xml:space="preserve">
     <value>Wall locations.</value>
- </data>
+  </data>
   <data name="ScheduleFilterTypeDescription" xml:space="preserve">
     <value>A View Schedule Filter Type.</value>
     <comment>Description for Filter Type</comment>
+  </data>
+  <data name="ElementsofCategoryInViewDescription" xml:space="preserve">
+    <value>Get all elements of the specified category in the specified view from the model.</value>
+    <comment>Description for All Elements of Category in View</comment>
+  </data>
+  <data name="PortDataViewToolTip" xml:space="preserve">
+    <value>The View</value>
   </data>
 </root>
